# pricing

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  load_market_data.py  load_test_market_data.py  main.cpp  market_db.py  start_jupyter.sh  start_jupyter.sh~
app/: BarrierEnhancedNote.cpp  CMakeLists.txt  DigitalCallOption.cpp  FlatMarket.h  HestonNandi.h  JsonExample.cpp  LocallyCappedGloballyFlooredCliquet.cpp  NapoleonCliquet.cpp  OneTouchCallOption.cpp  README.md  ReverseCliquet.cpp  lcgf_cliquet.cpp  locallyCappedGloballyFlooredCliquet.cpp  main.cpp  napoleon.cpp  napoleonCliquet.cpp  oneTouchCallOption.cpp  one_touch_call.cpp  reverseCliquet.cpp  reverse_cliquet.cpp
app/gatheral/: CMakeLists.txt  DigitalCallOption.cpp  HestonNandi.h  ImpliedVolCurve.cpp  ImpliedVolCurves.cpp  LocallyCappedGloballyFlooredCliquet.cpp  NapoleonCliquet.cpp  OneTouchCallOption.cpp  README.md  ReverseCliquet.cpp
libs/: CMakeLists.txt
libs/include/common/: Date.h  Params.h  TableUtils.h  Types.h  types.h
libs/include/market/: BSVolSlice.h  ConstantDiscountCurve.h  ConstantForwardCurve.h  Curve.h  DiscountCurve.h  FlatVolSlice.h  Market.h  MarketDB.h  MarketImpl.h  SVI.h  SVIVolSlice.h  SimpleMarket.h
libs/include/mc/: Process.h  ProcessStateStepper.h  RNG.h  TimeGrid.h
libs/include/models/: BSPricer.h  bsformula.h
libs/include/numerics/: Integration.h  RNG.h  RootFinding.h  types.h
libs/include/numerics/interpolation/: LinearInterpolator.h
libs/include/numerics/linear/: PiecewiseLinearFunction.h  Segment.h
libs/include/payoff/: ConstantFold.h  ConstantFoldVisitor.h  FixingCollector.h  FixingDate.h  MarketVisitor.h  Observable.h  PLFVisitor.h  PLVisitor.h  Payment.h  Payoff.h  PayoffNode.h  PiecewiseLinearFunctionVisitor.h  Transforms.h  types.h
libs/include/pricer/: BSFormula.h  BSPricer.h  HestonFormula.h  HestonPricer.h  ImpliedVol.h  LocalVolFormula.h  MCPricer.h  MCPricerWrapper.h  PLFPayoffPricer.h  PayoffPricer.h
libs/include/vol/: SVI.h
libs/src/market/: MarketDB.cpp  MarketImpl.cpp
libs/src/mc/: Process.cpp  TimeGrid.cpp
libs/src/models/: BSPricer.cpp
libs/src/numerics/linear/: PiecewiseLinearFunction.cpp
libs/src/payoff/: ApplyFixings.cpp  ApplyMarket.cpp  ConstantFold.cpp  FixingCollector.cpp  JsonCodec.cpp  JsonEncoder.cpp  MarketVisitor.cpp  PiecewiseLinearFunctionVisitor.cpp  ToPiecewiseLinearFunction.cpp
libs/src/pricer/: BSPricer.cpp  HestonPricer.cpp  PLFPayoffPricer.cpp
libs/tests/: CMakeLists.txt
libs/tests/market/: MarketDB_test.cpp
libs/tests/mc/: MCTestUtils.h  ProcessStateStepper_test.cpp  Process_test.cpp  TimeGrid_test.cpp
libs/tests/models/: test_bsformula.cpp
libs/tests/numerics/: Integration_test.cpp  RootFinding_test.cpp
libs/tests/numerics/interpolation/: LinearInterpolator_test.cpp
libs/tests/numerics/linear/: PiecewiseLinearFunction_test.cpp  test_plf.cpp  test_pwl.cpp
libs/tests/payoff/: ApplyFixings_test.cpp  ApplyMarket_test.cpp  ConstantFoldVisitor_test.cpp  ConstantFold_test.cpp  FixingCollector_test.cpp  JsonCodec_test.cpp  JsonEncoder_test.cpp  ObservableTestUtils.h  Observable_test.cpp  PayoffNode_test.cpp  PayoffTestUtils.h
libs/tests/pricer/: BSFormula_test.cpp  BSPricer_test.cpp  HestonFormula_test.cpp  ImpliedVol_test.cpp  MCPricer_test.cpp  PLFPayoffPricer_test.cpp
numerics/: CMakeLists.txt  PiecewiseLinearFunction.cpp  PiecewiseLinearFunction.h  Segment.h  test_pwl.cpp  types.h
payoff/: CMakeLists.txt  FixingDate.h  PLVisitor.h  PayoffNode.h
python/: BindMarket.cpp  BindObservables.cpp  BindPayoffs.cpp  BindPricer.cpp  Bindings.cpp  CMakeLists.txt  README.md  RegisterBindings.h  bind_observables.cpp
python/app/: barrier_enhanced_note.py  implied_vol_curve.py  locally_capped_globally_floored_cliquet.py  one_touch_call.py  reverse_cliquet.py
python/scripts/: digital_call.py  json_pricing.py  napoleon_cliquet.py  payoff.json
python/src/: BindMarket.cpp  BindObservables.cpp  BindPayoffs.cpp  BindPricer.cpp
python/tests/: test_market.py  test_observables.py  test_payoffs.py  test_pricer.py
scripts/: pre-commit.sh
